# verify_tx

./: .env  Cargo.toml
migrations/2023-07-10-100627_create_posts/: down.sql  up.sql
src/: balance_ver.rs  balance_verify.rs  get_tx_info.rs  insert_data.rs  main.rs  models.rs  network_fee_verify.rs  query.rs  schema.rs  send_raw_tx.rs
